Issue with Overlap on themes header #448

--- a/wp-content/themes/blue-bold/css/theme-style.css
+++ b/wp-content/themes/blue-bold/css/theme-style.css
@@ -1778,6 +1778,7 @@ ul.gallery {
 }
 .lang-sel > div {
   text-align: left;
+  z-index: 3;
 }
 .lang-sel > div ul,
 .lang-sel > div li {
