--- a/wp-content/themes/impruwclientparent/css/less/site-elements/language-switcher.less
+++ b/wp-content/themes/impruwclientparent/css/less/site-elements/language-switcher.less
@@ -15,6 +15,7 @@
 	}
 	> div {
 		text-align: left;
+		z-index: 3;
 		ul, li {
 			min-width: 170px;
 			height: 25px;
