--- a/wp-content/themes/theme-diamond/css/theme-style.css
+++ b/wp-content/themes/theme-diamond/css/theme-style.css
@@ -1780,6 +1780,7 @@ ul.gallery {
 }
 .lang-sel > div {
   text-align: left;
+  z-index: 3;
 }
 .lang-sel > div ul,
 .lang-sel > div li {
